# BrokerClient

./: BrokerClient.cpp  BrokerClient.h  CMakeLists.txt  CMakePresets.json  Database.cpp  Database.h  README.md  Test.cpp
include/: sqlite3.h
lib/: gmock.lib  gmock_main.lib  gtest.lib  gtest_main.lib  qpid-proton-core.lib  qpid-proton-cpp.lib  qpid-proton-proactor.lib  qpid-proton.lib  sqlite3.lib
